# Denoising

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
configs/: default_config.yaml  strategy_4.yaml
denoising/: __init__.py
denoising/cli/: __init__.py  main.py
denoising/config/: __init__.py  config_loader.py  schemas.py
denoising/core/: __init__.py  atlas.py  denoiser.py  extractor.py  pipeline.py
denoising/io/: __init__.py  confounds.py  file_handler.py  nilearn_confounds.py
denoising/utils/: __init__.py  coverage.py  helpers.py
notebooks/: covearge.ipynb  example_usage.ipynb  stress_data.ipynb
plans/: architecture.md  nilearn_confounds_migration.md
tests/: __init__.py  test_config.py  test_core.py  test_everything.py  test_io.py
