[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-denoising"
version = "0.1.0"
description = "BOLD fMRI denoising and time-series extraction using nilearn"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "nilearn>=0.10.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "nibabel>=5.0.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
fmri-denoise = "denoising.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["denoising*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"